# finance_AI

./: .env.example  .gitignore  Dockerfile  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt
ai/: docx_export.py  prompts.py  reporter.py
analysis/: backtest.py  factor.py  models.py  screener.py  technical.py
charts/: plotter.py
config/: qlib_config.yaml  settings.py
data/: cache.py  converter.py  fetcher.py  schema.sql  web_collector.py
scripts/: init_data.py  update_data.py
skill/: commands.py  formatter.py  handler.py  scheduler.py
